Bug 292295. Blocks with clearance are not actually top-margin-roots. Their top margin is still managed by the parent block if there is one. Fixes an Acid2 issue. r+sr=dbaron,a=asa